...
import kotlinx.coroutines.flow.StateFlow

enum class DiagnosticLevel { Debug, Info, Warning, Error }

enum class DiagnosticComponent {
    Persistence,
    Application
}

enum class DiagnosticSource { System, Unknown }

enum class DiagnosticSensitiveField {
    ExceptionDetails
...
